devops/be-dept1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-dept1
  labels:
    app: db-dept1
spec:
  volumes:
  - name: pv-dept1
    persistentVolumeClaim:
      claimName: pvc-dept1
  containers:
  - image: mongo
    name: container-dept1
    command:
    - mongod
    - "--bind_ip"
    - "0.0.0.0"
    ports:
    - containerPort: 27017
    volumeMounts:
    - name: pv-dept1
      mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-dept1
  name: db-dept1
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: db-dept1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finosys-dept1-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finosys-dept1
  template:
    metadata:
      labels:
        app: finosys-dept1
    spec:
      containers:
      - image: fazzyaziz/finosys-dept1:vfinal
        name: container-dept1
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: finosys-dept1-service
spec:
  ports:
  - port: 5002
    targetPort: 5002
  selector:
    app: finosys-dept1
  type: LoadBalancer
