devops/be-user.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-user
  labels:
    app: db-user
spec:
  volumes:
  - name: pv-user
    persistentVolumeClaim:
      claimName: pvc-user
  containers:
  - image: mongo
    name: container-user
    command:
    - mongod
    - "--bind_ip"
    - "0.0.0.0"
    ports:
    - containerPort: 27017
    volumeMounts:
    - name: pv-user
      mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-user
  name: db-user
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: db-user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finosys-user-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finosys-user
  template:
    metadata:
      labels:
        app: finosys-user
    spec:
      containers:
      - image: fazzyaziz/finosys-users:vf1
        name: container-user
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: finosys-user-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: finosys-user
  type: LoadBalancer
