devops/fe-dept2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fe-dept2
  name: fe-dept2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-dept2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fe-dept2
    spec:
      containers:
      - image: fazzyaziz/finosys-fe-dept2:latest
        imagePullPolicy: Always
        name: fe-dept2
---
apiVersion: v1
kind: Service
metadata:
  name: fe-dept2
spec:
  selector:
    app: fe-dept2
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
