devops/fe-gs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fe-gs
  name: fe-gs-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-gs
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fe-gs
    spec:
      containers:
      - image: fazzyaziz/finosys-fe-gs:v2
        imagePullPolicy: Always
        name: fe-gs
---
apiVersion: v1
kind: Service
metadata:
  name: fe-gs
spec:
  selector:
    app: fe-gs
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
