devops/fe-patient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fe-patient
  name: fe-patient-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-patient
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fe-patient
    spec:
      containers:
      - image: fazzyaziz/finosys-fe-patient:latest
        imagePullPolicy: Always
        name: fe-patient
---
apiVersion: v1
kind: Service
metadata:
  name: fe-patient
spec:
  selector:
    app: fe-patient
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
