devops/fe-store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fe-store
  name: fe-store-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-store
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fe-store
    spec:
      containers:
      - image: fazzyaziz/finosys-fe-store:v2
        imagePullPolicy: Always
        name: fe-store
---
apiVersion: v1
kind: Service
metadata:
  name: fe-store
spec:
  selector:
    app: fe-store
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
