devops/pv-dept2-transaction.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-dept2-tr
  labels:
    app: db-dept2-tr
spec:
  volumes:
  - name: pv-dept2-tr
    persistentVolumeClaim:
      claimName: pvc-dept2-tr
  containers:
  - image: mongo
    name: container-dept2-tr
    command:
    - mongod
    - "--bind_ip"
    - "0.0.0.0"
    ports:
    - containerPort: 27017
    volumeMounts:
    - name: pv-dept2-tr
      mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-dept2-tr
  name: db-dept2-tr
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: db-dept2-tr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finosys-dept2-tr-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finosys-dept2-tr
  template:
    metadata:
      labels:
        app: finosys-dept2-tr
    spec:
      containers:
      - image: fazzyaziz/finosys-dept2-transaction:latest
        name: container-dept2-tr
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: finosys-dept2-tr-service
spec:
  ports:
  - port: 5005
    targetPort: 5005
  selector:
    app: finosys-dept2-tr
  type: LoadBalancer
