devops/pv-gs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-gs
  labels:
    app: db-gs
spec:
  volumes:
  - name: pv-gs
    persistentVolumeClaim:
      claimName: pvc-gs
  containers:
  - image: mongo
    name: container-gs
    command:
    - mongod
    - "--bind_ip"
    - "0.0.0.0"
    ports:
    - containerPort: 27017
    volumeMounts:
    - name: pv-gs
      mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-gs
  name: db-gs
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: db-gs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finosys-gs-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finosys-gs
  template:
    metadata:
      labels:
        app: finosys-gs
    spec:
      containers:
      - image: fazzyaziz/finosys-gs:latest
        name: container-gs
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: finosys-gs-service
spec:
  ports:
  - port: 5006
    targetPort: 5006
  selector:
    app: finosys-gs
  type: LoadBalancer
